--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ fastembed = "5.7"
 lance-arrow = "1.0"
 arrow-array = "56.2"
 arrow-schema = "56.2"
+git2 = "0.19"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 
