--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "sig
 async-trait = "0.1"
 
 # HTTP Client
-reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
+reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls-native-roots"], default-features = false }
 
 # System Information
 sysinfo = "0.30"
