--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,12 @@ edition = "2021"
 description = "A globally available, high-performance terminal AI assistant"
 authors = ["Your Name <you@example.com>"]
 
+[workspace]
+members = ["core", "server"]
+
 [dependencies]
+mylm-core = { path = "./core" }
+
 # CLI Framework
 clap = { version = "4.5", features = ["derive"] }
 
@@ -20,13 +25,6 @@ reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls-native-r
 sysinfo = "0.30"
 
 # Configuration Management
-config = "0.14"
-lancedb = "0.23"
-fastembed = "5.7"
-lance-arrow = "1.0"
-arrow-array = "56.2"
-arrow-schema = "56.2"
-git2 = "0.19"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 
@@ -63,6 +61,7 @@ dirs = "5.0"
 home = "0.5"
 chrono = { version = "0.4", features = ["std", "serde"] }
 hostname = "0.4"
+arboard = "3.4"
 
 [dev-dependencies]
 tempfile = "3.10"
