build: increment build number and update workspace configuration
- Updated build hash and build number for release 394
- Removed server member from workspace to focus on core library
- Simplified workspace structure to core-only architecture

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "A globally available, high-performance terminal AI assistant"
 authors = ["Your Name <you@example.com>"]
 
 [workspace]
-members = ["core", "server"]
+members = ["core"]
 
 [dependencies]
 mylm-core = { path = "./core" }
