build: bump build number and update package metadata
- Increment build number from 486 to 487
- Update Cargo.toml with author, repository, and package metadata
- Add keywords, categories, license, and documentation links
- Update README with improved usage examples and troubleshooting section

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,14 @@ name = "mylm"
 version = "0.1.0"
 edition = "2021"
 description = "A globally available, high-performance terminal AI assistant"
-authors = ["Your Name <you@example.com>"]
+authors = ["Edward <ediblackk@users.noreply.github.com>"]
+repository = "https://github.com/ediblackk/mylm"
+homepage = "https://github.com/ediblackk/mylm"
+documentation = "https://github.com/ediblackk/mylm"
+keywords = ["terminal", "ai", "llm", "productivity", "tool"]
+categories = ["command-line-utilities", "development-tools"]
+license = "MIT"
+readme = "README.md"
 
 [workspace]
 members = ["core"]
