feat: add websocket server and improve windows installer
- Add `server` subcommand to start WebSocket listener on default port 41901
- Add `tokio-tungstenite`, `uuid`, and `base64` dependencies
- Update `install.ps1` to robustly detect C++ Linker (link.exe) availability
- Add automated `winget` installation for Visual Studio C++ Workload
- Remove obsolete `WINDOWS_INSTALL_STRATEGY.md`
- Clean up README and update build artifacts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,11 @@ home = "0.5"
 chrono = { version = "0.4", features = ["std", "serde"] }
 hostname = "0.4"
 arboard = "3.4"
+base64 = "0.22"
+uuid = { version = "1.0", features = ["v4", "serde"] }
+
+# WebSocket Server
+tokio-tungstenite = "0.21"
 
 [dev-dependencies]
 tempfile = "3.10"
