feat(agent): implement agent v2 and background tools
This update introduces the Agent V2 architecture and a significant refactoring of the tool system to support asynchronous execution and structured interaction tracking.

- Introduce Agent V2 with improved state management and protocol definitions
- Refactor Tool trait to support the ToolOutput enum (Immediate/Background)
- Implement JobRegistry to manage and track background shell executions
- Add Scribe and an enhanced Journaling system for interaction history
- Add DelegateTool to enable sub-task delegation between agents
- Update release CI workflow to generate and attach SHA256 checksums

BREAKING CHANGE: The Tool trait's call method signature now returns
Result<ToolOutput, Box<dyn StdError>> instead of Result<String>.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,6 +97,34 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          files: release_assets/*
+          files: |
+            release_assets/*
           generate_release_notes: true
           draft: true
+
+  checksums:
+    name: Generate Checksums
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: mylm-*
+          merge-multiple: true
+          path: release_assets
+
+      - name: Generate SHA256 sums
+        run: |
+          cd release_assets
+          sha256sum * > SHA256SUMS
+          cat SHA256SUMS
+
+      - name: Update Release with Checksums
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: release_assets/SHA256SUMS
+          append_body: true
