--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ sysinfo = "0.30"
 
 # Configuration Management
 serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.9"
+serde_yml = "0.0.12"
 
 # JSON Handling
 serde_json = "1.0"
@@ -49,7 +49,6 @@ async-stream = "0.3"
 shell-words = "1.1"
 
 # Terminal Output
-ansi_term = "0.12"
 console = "0.15"
 dialoguer = "0.11"
 inquire = "0.7"
@@ -67,16 +66,16 @@ thiserror = "2.0"
 dirs = "5.0"
 home = "0.5"
 chrono = { version = "0.4", features = ["std", "serde"] }
-hostname = "0.4"
-arboard = "3.4"
 base64 = "0.22"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 
 # WebSocket Server
 tokio-tungstenite = "0.21"
 
+# Clipboard
+arboard = "3.4"
+
 [dev-dependencies]
-tempfile = "3.10"
 
 [profile.dev]
 # Use less debug info for faster linking
