--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,8 +16,10 @@ arrow-array = "56.2"
 arrow-schema = "56.2"
 git2 = "0.19"
 serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.9"
+serde_yml = "0.0.12"
 serde_json = "1.0"
+toml = "0.8"
+lazy_static = "1.4"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 regex = "1.10"
 urlencoding = "2.1"
