--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "fs", "process", "sync"] }
+tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "fs", "process", "sync", "time"] }
+rand = "0.8"
 async-trait = "0.1"
 reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls-native-roots"], default-features = false }
 sysinfo = "0.30"
@@ -19,6 +20,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yml = "0.0.12"
 serde_json = "1.0"
 toml = "0.8"
+tera = "1.0"
+tracing = "0.1"
 lazy_static = "1.4"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 regex = "1.10"
