--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "fs", "process", "sync", "time"] }
+tokio-stream = "0.1"
 rand = "0.8"
 async-trait = "0.1"
 reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls-native-roots"], default-features = false }
