--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -47,6 +47,8 @@ console = "0.15"
 crossterm = "0.28"
 ignore = "0.4"
 glob = "0.3"
+html-escape = "0.2"
+log = "0.4"
 
 [dev-dependencies]
 tempfile = "3.0"
